--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Мой сайт</title></head><body><h1>Da poshli vy vse nahui</h1></body></html>
+<!DOCTYPE html><html><head><title>Мой сайт</title></head><body><h1>privet</h1></body></html>
